# cpp_visions

./: Button.h  CMakeLists.txt  Common.cpp  Common.h  Entity.h  EntityEditor.cpp  Files.cpp  Game.cpp  Game.h  LevelEditor.cpp  LevelEditor.h  MainMenu.cpp  MainMenu.h  Player.cpp  Player.h  Polygon.cpp  Polygon.h  Projectile.cpp  Projectile.h  Prompt.h  Weapon.cpp  Weapon.h  character.cpp  file.cpp  file.h  headers.h  level.cpp  main.cpp
src/: CMakeLists.txt  main.cpp
src/Entities/: Alive.cpp  Alive.h  Armed.cpp  Armed.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityStorage.cpp  EntityStorage.h  MainPlayer.cpp  MainPlayer.h  Movable.cpp  Movable.h  Pickable.cpp  Pickable.h  Projectile.cpp  Projectile.h  Rotatable.cpp  Rotatable.h  SpriteHolder.cpp  SpriteHolder.h  Visioning.cpp  Visioning.h  Weapon.cpp  Weapon.h
src/EventHandlers/: CMakeLists.txt  EventHandler.h  GameEventHandler.cpp  GameEventHandler.h
src/EventHandlers/Checkers/: CMakeLists.txt  Checker.cpp  Checker.h  CheckersProvider.cpp  CheckersProvider.h
src/EventHandlers/Commands/: CMakeLists.txt  Command.h  CommandFactory.h
src/EventHandlers/Commands/MainPlayerCommands/: CMakeLists.txt  MainPlayerCommand.cpp  MainPlayerCommand.h  MoveDown.cpp  MoveDown.h  MoveLeft.cpp  MoveLeft.h  MoveRight.cpp  MoveRight.h  MoveUp.cpp  MoveUp.h  Pickup.cpp  Pickup.h  Rotate.cpp  Rotate.h
src/EventHandlers/Commands/WindowCommands/: CMakeLists.txt  Close.cpp  Close.h  Resize.cpp  Resize.h  WindowCommand.cpp  WindowCommand.h
src/EventHandlers/Executors/: CMakeLists.txt  Executor.cpp  Executor.h  ExecutorsProvider.cpp  ExecutorsProvider.h
src/Game/: CMakeLists.txt  GameManager.cpp  GameManager.h
src/Game/Factories/: CMakeLists.txt  EnemyFactory.cpp  EnemyFactory.h  WeaponFactory.cpp  WeaponFactory.h
src/Game/Updaters/: CMakeLists.txt  Updater.cpp  Updater.h
src/Intersections/: CMakeLists.txt  CirclesAndArcs.cpp  Intersections.h  ManyLinesVsLine.cpp  lineVsLine.cpp
src/LevelEditor/: CMakeLists.txt  LevelEditor.cpp  LevelEditor.h
src/MainMenu/: CMakeLists.txt  MainMenu.cpp
src/Polygon/: Bbox.cpp  Bbox.h  CMakeLists.txt  Polygon.cpp  Polygon.h  VertexHolder.cpp  VertexHolder.h
src/States/: CMakeLists.txt  GameState.cpp  GameState.h  State.h
src/TopLevel/: CMakeLists.txt  WindowHandler.cpp  WindowHandler.h
src/Utility/: Button.h  CMakeLists.txt  Constants.h  Prompt.h  Types.h  Utility.cpp  Utility.h  Watcher.cpp  Watcher.h
src/Utility/CommonInterfaces/: CMakeLists.txt  Drawable.h  Serializable.h  Updatable.cpp  Updatable.h
src/Utility/DataNodes/: CMakeLists.txt  DataNode.h  JSONDataNode.cpp  JSONDataNode.h  MainDataNode.h
src/Utility/PathController/: CMakeLists.txt  PathController.cpp  PathController.h
src/Utility/Trigonometry/: CMakeLists.txt  Edge.h  Point.cpp  Point.h  Vector.cpp  Vector.h
src/Utility/WindowHolder/: CMakeLists.txt  WindowHolder.cpp  WindowHolder.h
src/sfEvents/: CMakeLists.txt  sfEventComparator.cpp  sfEventComparator.h  sfEventSerializer.cpp  sfEventSerializer.h
